--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
   "dependencies": {
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.1",
+    "@fortawesome/fontawesome-svg-core": "^7.0.1",
+    "@fortawesome/free-regular-svg-icons": "^7.0.1",
+    "@fortawesome/free-solid-svg-icons": "^7.0.1",
+    "@fortawesome/react-fontawesome": "^3.0.2",
     "@mui/icons-material": "7.3.2",
     "@mui/material": "7.3.2",
     "@mui/x-date-pickers": "8.11.3",
     "@mui/x-date-pickers-pro": "8.11.3",
-    "custom-react-slick": "0.14.11",
     "dayjs": "1.11.18",
     "firebase": "12.3.0",
     "react": "^19.0.0",
     "react-calendar": "6.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "7.9.1",
-    "react-slick": "0.31.0",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "12.0.2"
   },
   "devDependencies": {
@@ -36,6 +40,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.13.0",
-    "vite": "^6.0.3"
+    "vite": "^6.0.3",
+    "vite-plugin-svgr": "^4.5.0"
   }
 }
