--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.1",
     "@fortawesome/fontawesome-svg-core": "^7.0.1",
+    "@fortawesome/free-brands-svg-icons": "^7.0.1",
     "@fortawesome/free-regular-svg-icons": "^7.0.1",
     "@fortawesome/free-solid-svg-icons": "^7.0.1",
     "@fortawesome/react-fontawesome": "^3.0.2",
@@ -27,6 +28,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "7.9.1",
     "react-slick": "^0.31.0",
+    "recharts": "^3.2.1",
     "slick-carousel": "^1.8.1",
     "swiper": "12.0.2"
   },
